Mar 19 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release v0.0.6

Mar 18 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Fix 2to2 test on CI

Tue 13 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release v0.0.5
	* Fix accidentaly broken change ;-(
	* Fix package dependencies (version syntax)
	* Release v0.0.4
	* Set inferno dependencies as peer
	* Remove 'event' and 'hook' keys from props (just set property directly)

Wed 07 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Add className

Tue 06 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Release v0.0.3
	* Fix `word-wrap` issue with CSS on Firefox (example)
	* Refactor code style
	* Add keymap and macro
	* Release v0.0.2
	* Setup unit/e2e testing

Mon 05 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Fix version dependency
	* Release v0.0.1
	* Name project as Vergil

Sun 04 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
	* Initial commit ;)