@@ -1,4 +1,5 @@
 Mar 19 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
+	* Fix basic key mappings
 	* Release v0.0.6
 
 Mar 18 Mar 2018 Yasuhiro Asaka <yasuhiro.asaka@grauwoelfchen.net>
